--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,4 @@
 <!-- Contenedor principal -->
-<div class="container mt-3">
-  <div class="row">
-    <!-- Columna que ocupa la mitad del ancho -->
-    <div class="col-md-6">
-      <app-tabla></app-tabla>
-    </div>
-
-    <!-- Columna que ocupa la otra mitad del ancho -->
-    <div class="col-md-6">
-      Hola
-    </div>
-  </div>
+<div class="container-fluid">
+  <app-tabla></app-tabla>
 </div>
