--- a/src/app/componente/Tabla/tabla.component.html
+++ b/src/app/componente/Tabla/tabla.component.html
@@ -53,7 +53,9 @@
       <div class="modal-body">
         <!-- Aquí se mostrarán los detalles del vehículo -->
         <p id="modalContent">Cargando...</p>
-        
+        <div class="map-container">
+          <app-Mapa></app-Mapa>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
