--- a/src/app/componente/Tabla/tabla.component.html
+++ b/src/app/componente/Tabla/tabla.component.html
@@ -1,17 +1,26 @@
 <div class="container mt-3">
-  <div class="row mb-3">
-    <div class="col-12 text-center">
+  <div class="row mb-3 align-items-center">
+    <div class="col-12 text-center mb-3">
       <h1>Gestor de Vehículo</h1>
     </div>
-    <div class="col-lg-8 col-md-10 col-12 mx-auto">
-      <input 
-        type="text" 
-        id="searchBox" 
-        class="form-control form-control-lg" 
-        placeholder="Buscar modelo..."
-        (input)="onSearch($event)" />
+    <!-- Columna de búsqueda y botón en paralelo -->
+    <div class="col-12 col-md-8 mx-auto d-flex">
+      <div class="input-group flex-grow-1 me-2">
+        <input 
+          type="text" 
+          id="searchBox" 
+          class="form-control form-control-lg" 
+          placeholder="Buscar modelo..."
+          (input)="onSearch($event)" />
+      </div>
+      <button 
+        class="btn btn-primary" 
+        type="button" 
+        data-bs-toggle="modal" 
+        data-bs-target="#filtro">
+        Moldal de Filtros
+      </button>
     </div>
-  </div>
 
   <div class="row">
     <div class="col-md-12">
@@ -23,8 +32,8 @@
               <th>Modelo</th>
               <th>Año</th>
               <th>Ciudad MPG</th>
-              <th >Carretera MPG</th>
-              <th >Comb. MPG</th>
+              <th>Carretera MPG</th>
+              <th>Comb. MPG</th>
               <th>Cilindrada</th>
               <th>Desplazamiento</th>
               <th>Tracción</th>
@@ -52,13 +61,36 @@
       </div>
       <div class="modal-body">
         <!-- Aquí se mostrarán los detalles del vehículo -->
-        <p id="modalContent">Cargando...</p>
+        <p id="modalContent" >Cargando...</p>
         <div class="map-container">
           <app-Mapa></app-Mapa>
         </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="filtro" tabindex="-1" aria-labelledby="searchModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="searchModalLabel">Buscar Vehículo</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="container mt-5">
+          
+        
+         
+        
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-primary">Buscar</button>
       </div>
     </div>
   </div>
