--- a/src/app/componente/Tabla/tabla.component.html
+++ b/src/app/componente/Tabla/tabla.component.html
@@ -3,29 +3,38 @@
     <div class="col-12 text-center mb-3">
       <h1>Gestor de Vehículo</h1>
     </div>
-    <!-- Columna de búsqueda y botón en paralelo -->
-    <div class="col-12 col-md-8 mx-auto d-flex">
-      <div class="input-group flex-grow-1 me-2">
+    <div class="col-12 col-md-8 mx-auto d-flex align-items-center justify-content-center mb-3">
+      <div class="lds-ring" *ngIf="isLoading"><div></div><div></div><div></div><div></div></div>
+      <div class="lds-static-ring" *ngIf="!isLoading"><div></div><div></div><div></div><div></div></div>
+      <div class="input-group me-2">
+        
         <input 
           type="text" 
           id="searchBox" 
-          class="form-control form-control-lg" 
+          class="form-control form-control-sm" 
           placeholder="Buscar modelo..."
           (input)="onSearch($event)" />
       </div>
       <button 
-        class="btn btn-primary" 
+        class="button-verde" 
         type="button" 
         data-bs-toggle="modal" 
-        data-bs-target="#filtro">
-        Moldal de Filtros
+        data-bs-target="#filtro"
+        aria-label="Abrir filtros">
+        Filtros
       </button>
     </div>
+    <div class="col-12 text-center">
+      
+      <p class="mb-0">Filtro activo: <strong>{{translateOption(filter)}}</strong></p>
+    </div>
+  </div>
+    
 
   <div class="row">
     <div class="col-md-12">
       <div class="table-wrapper mt-4">
-        <table id="example" class="display table table-striped table-bordered">
+        <table id="example" class="display table table-striped table-bordered  table-override">
           <thead>
             <tr>
               <th>Marca</th>
@@ -73,24 +82,30 @@
   </div>
 </div>
 
-<div class="modal fade" id="filtro" tabindex="-1" aria-labelledby="searchModalLabel" aria-hidden="true">
+
+
+<div class="modal fade" id="filtro" tabindex="-1" aria-labelledby="filtroLabel" aria-hidden="true" >
   <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="searchModalLabel">Buscar Vehículo</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    <div class="modal-content" >
+      <div class="modal-header d-flex justify-content-center">
+          <h5 class="modal-title center-auto" id="filtroLabel">Filtro</h5>
+        
+       
       </div>
       <div class="modal-body">
-        <div class="container mt-5">
-          
-        
-         
-        
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-        <button type="button" class="btn btn-primary">Buscar</button>
+        <form [formGroup]="radioForm" (ngSubmit)="onSubmit()">
+          <div class="form-check" *ngFor="let car of cars">
+            <input class="form-check-input" type="radio" [value]="car" formControlName="cars" id="{{car}}">
+            <label class="form-check-label" for="{{car}}">
+              {{ translateOption(car) }}
+            </label>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="button-azul"  (click)="onSubmit()">Filtrar</button>
+            <button type="button" class="button-verde" data-bs-dismiss="modal">Cerrar</button>
+            
+          </div>
+        </form>
       </div>
     </div>
   </div>
