--- a/src/app/componente/Tabla/tabla.component.css
+++ b/src/app/componente/Tabla/tabla.component.css
@@ -1,42 +1,34 @@
 
-/* Ajustar el tamaño del texto en la tabla */
 table th, table td {
   font-size: 12px;
 }
 
-/* Estilo para controlar el ancho de la tabla y permitir el desplazamiento */
 .table-wrapper {
   max-width: 100%;
   overflow-x: auto;
-
 }
 
 .table {
   width: 100%;
   border-collapse: collapse;
-  table-layout: fixed; /* Asegura que el ancho de las columnas no cambie al ordenar */
-  
+  table-layout: fixed; 
 }
 
 .table th, .table td {
- 
-  
   text-align: center;
   padding: 8px;
   vertical-align: middle;
-  overflow: hidden; /* Evita que el contenido desborde las celdas */
-  text-overflow: ellipsis; /* Muestra puntos suspensivos para contenido largo */
-  white-space: nowrap; /* Evita el ajuste de línea dentro de las celdas */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap; 
   
 }
 
 .table th {
   background-color: #f8f9fa;
-
 }
 
 .table td {
-
   background-color: #ffffff;
 }
 
@@ -47,14 +39,8 @@ table th, table td {
 }
 
 /* Ajuste del tamaño del botón */
-.btn-primary {
-  padding: 0.375rem 0.75rem; /* Reducir el padding del botón */
-  font-size: 0.875rem; /* Tamaño de fuente más pequeño */
-}
-
-/* Ajuste del espaciado entre el input y el botón */
 .input-group {
-  margin-right: 0.5rem; /* Ajustar el margen derecho para espacio entre input y botón */
+  margin-right: 0.5rem; 
 }
 
 /* CSS Button*/
@@ -151,9 +137,6 @@ table th, table td {
   box-shadow: rgba(39, 174, 96, .2) 0 6px 12px;
 }
 
-
-
-
 /* input*/
 
 .form-control {
@@ -183,8 +166,6 @@ table th, table td {
 
 
 /*loading*/
-
-
 .lds-ring,
 .lds-ring div {
   box-sizing: border-box;
@@ -251,26 +232,8 @@ table th, table td {
   border: 8px solid currentColor;
   border-radius: 50%;
   border-color: currentColor transparent transparent transparent;
-  /* Se ha eliminado la animación */
-  /* animation: lds-static-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite; */
 }
 
-.lds-static-ring div:nth-child(1) {
-  /* Se ha eliminado el retraso de animación */
-  /* animation-delay: -0.45s; */
-}
-
-.lds-static-ring div:nth-child(2) {
-  /* Se ha eliminado el retraso de animación */
-  /* animation-delay: -0.3s; */
-}
-
-.lds-static-ring div:nth-child(3) {
-  /* Se ha eliminado el retraso de animación */
-  /* animation-delay: -0.15s; */
-}
-
-/* Se ha eliminado el keyframes */
 @keyframes lds-static-ring {
   0% {
     transform: rotate(0deg);
