--- a/src/app/componente/Tabla/tabla.component.html
+++ b/src/app/componente/Tabla/tabla.component.html
@@ -16,17 +16,19 @@
         <div></div>
         <div></div>
       </div>
-      <div class="input-group me-2">
+      <div class="input-group me-2 pm-2">
         <input type="text" id="searchBox" class="form-control form-control-sm"
           placeholder="Buscar {{translateOption(this.filter)}}" (input)="onSearch($event)" />
       </div>
+      
       <button class="button-verde" type="button" data-bs-toggle="modal" data-bs-target="#filtro"
         aria-label="Abrir filtros">
         Filtros
       </button>
     </div>
+    
     <div class="col-12 text-center">
-
+      <div id="warning-message" style="display: none; color: red;"></div>
       <p class="mb-0">Filtro activo: <strong>{{translateOption(filter)}}</strong></p>
     </div>
   </div>
